gcc/testsuite/gdc.test/compilable/test313f.d
// REQUIRED_ARGS: -de
import imports.f313;

void test()
{
    imports.f313.bug();
}
